[project]
name = "chef-py"
version = "0.1.0"
description = "Langchain chef app."
readme = "README.md"
requires-python = "~=3.14.0"
dependencies = [
    "langchain>=1.3.9",
    "langchain-core>=1.4.7",
    "langchain-openai>=1.3.2",
    "langchain-tavily>=0.2.18",
    "langsmith>=0.8.15",
    "pillow>=12.2.0",
    "python-dotenv>=1.2.2",
    "tavily-python>=0.7.26",
]
